<resources>
    <string name="app_name">Engineering Thesis</string>
    <string name="select_language">Wybierz język</string>
    <string name="image_app_3">Chłopak z słuchawkami mówiący wieloma językami</string>
    <string name="image_app_2">Mała dziewczynka na tle języków</string>
    <string name="description_app_main">Witaj w przygodzie nauki języków obcych!</string>
    <string name="image_app">Zdjęcie z napisem learn english na zółtym tle</string>
    <string name="language_image">Nazwa języka</string>
    <string name="select_game_description">Gry edukacyjne</string>
    <string name="find_out_picture_description">Find Out Picture</string>
    <string name="select_and_adjust_description">Select and Adjust</string>
    <string name="drag_and_drop_description">Drag and drop</string>
    <string name="find_out_vocabulary_description">Find Out Vocabulary</string>
    <string name="memory_game_description">Memory game</string>
    <string name="category_title">Kategorie</string>
    <string name="select_language_title">Wybierz język</string>
    <string name="select_category_title">Wybierz Kategorie</string>
    <string name="navigation_drawer_menu_register">Rejestracja</string>
    <string name="naviigation_drawer_menu_signup">Logowanie</string>
    <string name="toolbar_sort">Sortuj</string>
    <string name="navigation_drawer_open">Otwórz</string>
    <string name="navigation_drawer_close">Zamknij</string>
    <string name="game_icon">ikona gry</string>
    <string name="sign_up_title">Logowanie</string>
    <string name="accountName">Login</string>
    <string name="password">Hasło</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="logOnTitle">Zaloguj</string>
    <string name="account_name_EditText">Login</string>
    <string name="child_register_selector">Rejestracja Dziecka</string>
    <string name="register_teacher_selector">Rejestracja Nauczyciela</string>
    <string name="register_teacher_title">Rejestracja nauczyciela</string>
    <string name="register_teacher_name_title">Imie</string>
    <string name="register_teacher_surname_title">Nazwisko</string>
    <string name="register_teacher_yearBirth_title">Rok urodzenia</string>
    <string name="register_title">Rejestracja</string>
    <string name="register_teacher_account_name">Login</string>
    <string name="register_teacher_language_title">Język</string>
    <string name="register_child_title">Rejestracja Dziecka</string>
    <string name="register_child_name_title">Imie</string>
    <string name="register_child_surname_title">Nazwisko</string>
    <string name="register_child_yearBirth_title">Rok urodzenia</string>
    <string name="register_child_account_name">Login</string>
    <string name="register_child_city">Miasto</string>
    <string name="register_child_email">Email</string>
    <string name="register_teacher_city">Miasto</string>
    <string name="register_teacher_profession">Zawód</string>
    <string name="register_teacher_email">Email</string>
    <string name="register_teacher_address">Adres</string>
    <string name="register_teacher_zipcode">Adres pocztowy</string>
    <string name="dialog_username_title">Username</string>
    <string name="dialog_setusername_title">Podaj nazwę użytkownika</string>
    <string name="find_out_picture_imageGame">Find Out Picture Zdjecie</string>
    <string name="find_out_picture_game_title">Find Out Picture</string>
    <string name="instruction_game_title">Instrukcja gry</string>
    <string name="find_out_picture_game_instruction">Wybierz słowo pasujące do obrazka</string>
    <string name="select_teacher">Wybierz nauczyciela</string>
    <string name="shots_title">Liczba błędów: </string>
    <string name="find_out_vocabulary_gameTitle">Find Out Vocabulary</string>
    <string name="find_out_vocabulary_game_instruction">Wybierz obrazek pasujący do słowa</string>
    <string name="drag_and_drop_gameTitle">Drag And Drop</string>
    <string name="drag_and_drop_game_instruction">Przeciągnij zdjęcie w odpowiednie pole z napisem</string>
    <string name="memory_game_title">Memory Game</string>
    <string name="select_and_adjust_game_title">Select And Adjust</string>
    <string name="memory_game_instruction_description">Znajdż parę tych samych zdjęć</string>
    <string name="select_and_adjust_instruction_description">Przeciągnij słowo  do jednego z pustych pól</string>
    <string name="child_my_account_drawer_menu_item">Moje konto</string>
    <string name="child_game_result_drawer_menu_item">Wyniki</string>
    <string name="children_game_result_classification_drawer_menu_item">Ranking</string>
    <string name="teacher_children_game_results_drawer_menu_item">Wyniki dzieci</string>
    <string name="teacher_add_resources__drawer_menu_item">Dodaj zasoby</string>
    <string name="admin_create_teacher_account_drawer_menu">Załóż konto nauczyciela</string>
    <string name="logout_drawer_menu_item">Wyloguj</string>
    <string name="logout_drawer_menu_title_item">Zarządzanie logowaniem</string>
    <string name="my_account_data_title">Dane Konta</string>
    <string name="update_button_title">Edytuj</string>
    <string name="teacher_add_resources_panel">Panel dodawania</string>
    <string name="teacher_add_category_button_title">Dodaj kategorie</string>
    <string name="teacher_add_word_button_title">Dodaj słowo</string>
    <string name="teacher_add_image_button_title">Dodaj zdjęcie</string>
    <string name="teacher_add_audio_button_title">Dodaj plik audio</string>
    <string name="teacher_add_category_panel_title">Panel dodania kategorii</string>
    <string name="teacher_category_edittext_name">Nazwa</string>
    <string name="teacher_word_edittext_name">Słowo</string>
    <string name="teacher_sent_category_button_title">Dodaj</string>
    <string name="teacher_add_word_title">Panel dodania słowa</string>
    <string name="teacher_add_image_title">Panel dodania zdjęcia</string>
    <string name="teacher_add_audio_title">Panel dodania audio</string>
    <string name="spinner_select_category">Wybierz kategorie</string>
    <string name="spinner_select_word">Wybierz słowo</string>
    <string name="dialog_edittext_spinner_hint">Wyszukaj..</string>
    <string name="teacher_image_select_button">Wybierz zdjęcie</string>
    <string name="teacher_audio_select_button">Wybierz plik audio</string>
    <string name="teacher_send_audio_button_title">Dodaj</string>
    <string name="teacher_send_image_button_title">Dodaj</string>
    <string name="teacher_send_word_button_title">Dodaj</string>
    <string name="teacher_send_category_button_title">Dodaj</string>
    <string name="correct_answers_title">Poprawne odpowiedzi: </string>
    <string name="game_time_title">Czas w grze: </string>
    <string name="wrong_answers_title">Błędne odpowiedzi: </string>
    <string name="winVIew_next_game_button_title">Kolejna rozgrywka</string>
    <string name="congratulations_title">Gratulację! Wygrałeś !</string>
    <string name="number_of_words_title">Liczba słów:</string>
    <string name="delete_account_button">delete account button</string>
    <string name="admin_delete_account_menu_title">Usuń konto użytkownika</string>
    <string name="accounts_to_delete_title">Konta do usunięcia</string>
    <string name="winView_summary">Podsumowanie</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>