<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/childMyAccount"
        android:title="@string/child_my_account_drawer_menu_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/childGameResults"
        android:title="@string/child_game_result_drawer_menu_item"
        app:showAsAction="ifRoom" />

        <item
            android:id="@+id/childrenGameResults"
            android:title="@string/children_game_result_classification_drawer_menu_item"
            app:showAsAction="ifRoom" />
    </group>

    <item android:title="@string/logout_drawer_menu_title_item">
        <menu>
            <item android:id="@+id/child_logout"
                android:title="@string/logout_drawer_menu_item"
                app:showAsAction="ifRoom"
                />
        </menu>
    </item>

</menu>