<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAppBackground"
    tools:context=".TeacherAddResourcesActivity">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/teacher_add_resources_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorForTitles"
        android:text="@string/teacher_add_resources_panel"
        android:textSize="24sp" />

    <Button
        android:id="@+id/teacher_add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textColor="@color/colorActionButtonsText"
        android:background="@color/colorActionButtons"
        android:padding="5dp"
        android:text="@string/teacher_add_category_button_title" />

    <Button
        android:id="@+id/teacher_add_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textColor="@color/colorActionButtonsText"
        android:background="@color/colorActionButtons"
        android:padding="5dp"
        android:text="@string/teacher_add_word_button_title" />

    <Button
        android:id="@+id/teacher_add_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorActionButtons"
        android:padding="5dp"
        android:textColor="@color/colorActionButtonsText"
        android:text="@string/teacher_add_image_button_title" />

    <Button
        android:id="@+id/teacher_add_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorActionButtons"
        android:padding="5dp"
        android:textColor="@color/colorActionButtonsText"
        android:text="@string/teacher_add_audio_button_title" />



</LinearLayout>