<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAppBackground"
    tools:context=".TeacherRegisterActivity">

    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/register_teacher_title"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_name_title"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_surname_title"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_yearBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_yearBirth_title"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_city"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_profession"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                app:errorEnabled="true"
                android:textColorHint="@color/colorFormTitles">
                <EditText
                    android:id="@+id/editText_teacher_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_language_title"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFormTitles"
                app:errorEnabled="true"
                android:padding="30dp">
                <EditText
                    android:id="@+id/editText_teacher_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:hint="@string/register_teacher_account_name"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:textColorHint="@color/colorFormTitles">
                <EditText
                    android:id="@+id/editText_teacher_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="#000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:textColorHint="@color/colorFormTitles">
            <EditText
                android:id="@+id/editText_teacher_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="#000"
                android:hint="@string/register_teacher_email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textAlignment="center"
                android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/register_teacher_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title"
                    android:background="@color/colorActionButtons"
                    android:padding="5dp"
                    android:layout_margin="15dp"
                    android:layout_gravity="end" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>